--- a/src/resources/add/CustomerWindow.fxml
+++ b/src/resources/add/CustomerWindow.fxml
@@ -15,16 +15,10 @@
     </top>
     <center>
         <Pane prefHeight="222.0" prefWidth="400.0" BorderPane.alignment="CENTER">
-            <TextField fx:id="nameTxtFld" layoutX="194.0"/>
-            <TextField fx:id="addressTxtFld" layoutX="194.0" layoutY="30.0"/>
-            <TextField fx:id="contactTxtFld" layoutX="194.0" layoutY="60.0"/>
-            <!--<ComboBox fx:id="accountTypeComboBox" layoutX="194.0" layoutY="90.0"/>-->
-            <ComboBox fx:id="bNoComboBox" layoutX="194.0" layoutY="90.0"/>
+            <TextField fx:id="fNameTxtFld" layoutX="194.0"/>
+            <TextField fx:id="lNameTxtFld" layoutX="194.0" layoutY="30.0"/>
             <Label layoutX="103.0" layoutY="4.0" text="Name: "/>
             <Label layoutX="103.0" layoutY="34.0" text="Address: "/>
-            <Label layoutX="103.0" layoutY="64.0" text="Contact No.: "/>
-            <!--<Label layoutX="103.0" layoutY="94.0" text="Acc Type: " />-->
-            <Label layoutX="103.0" layoutY="94.0" text="Branch No.: "/>
         </Pane>
     </center>
 </PaneFrame>
